better values for statuses

--- a/views/macro/macro-editor.hbs
+++ b/views/macro/macro-editor.hbs
@@ -31,12 +31,12 @@
                       name="project"
                       placeholder="Select a status"
                   >
-                    <aui-option value="planning">Planning</aui-option>
-                    <aui-option value="onTarget">On Target</aui-option>
-                    <aui-option value="delayed">Delayed</aui-option>
-                    <aui-option value="atRisk">At Risk</aui-option>
-                    <aui-option value="onHold">On Hold</aui-option>
-                    <aui-option value="done">Done</aui-option>
+                    <aui-option value="Planning">Planning</aui-option>
+                    <aui-option value="On Target">On Target</aui-option>
+                    <aui-option value="Delayed">Delayed</aui-option>
+                    <aui-option value="At Risk">At Risk</aui-option>
+                    <aui-option value="On Hold">On Hold</aui-option>
+                    <aui-option value="Done">Done</aui-option>
                   </aui-select>
               </p>
           </form>
