fix styling with necessary class

--- a/views/macro/macro-view.hbs
+++ b/views/macro/macro-view.hbs
@@ -1,4 +1,4 @@
 {{!< ../layout}}
 <p>
-   <span class="aui-lozenge-{{style}}">{{status}}</span>
+   <span class="aui-lozenge aui-lozenge-{{style}}">{{status}}</span>
 </p>
